manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nexus-iq
  namespace: lifecycle
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: nexusiq-iqserver
    weight: 100
  port:
    targetPort: application
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
